--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,17 @@
       }
     ],
     "paths": {
-      "@/*": ["./*", "./app/*"],
+      "@/*": ["./*", "./app/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/map/CDTmap.js",
+    "app/map/constants.js",
+    "app/map/utils.js"
+  ],
   "exclude": ["node_modules"]
 }
