--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
