--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-photo-album": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
+    "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
