--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "next": "15.4.6",
     "next-auth": "5.0.0-beta.29",
     "postgres": "^3.4.7",
